# narrative-harm-classifier

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: release.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
api/: main.py
api/routes/: classify.py  health.py  validate.py
classifier/rules/: azure_nlp.py  engine.py
classifier/taxonomy/: loader.py
classifier/validators/: performance.py
core/: config.py  models.py
docs/: api-reference.md  architecture.md  concepts.md  configuration.md  coverage.md  faq.md  index.md  limitations.md  performance.md  quickstart.md  status-roadmap.md
docs/features/: benchmark.md  counter-narrative.md  dogwhistles.md  escalation-tracking.md  multilingual.md  provenance.md
narrative_harm_classifier/: __init__.py  cli.py
narrative_harm_classifier/api/: main.py
narrative_harm_classifier/api/routes/: benchmark.py  classify.py  health.py  tracking.py  validate.py
narrative_harm_classifier/classifier/: counter_narrative.py  factory.py  provenance.py
narrative_harm_classifier/classifier/rules/: dogwhistles.py  engine.py  patterns_loader.py
narrative_harm_classifier/classifier/taxonomy/: loader.py
narrative_harm_classifier/classifier/tracking/: models.py  store.py  tracker.py
narrative_harm_classifier/classifier/validators/: benchmark.py  i18n_smoke.py  performance.py
narrative_harm_classifier/core/: config.py  models.py  yaml_loader.py
narrative_harm_classifier/data/: benchmark_templates.yaml  dogwhistles.yaml  i18n_smoke_tests.yaml  taxonomy_v1.yaml
narrative_harm_classifier/data/patterns/: ar.yaml  en.yaml  es.yaml  fr.yaml  ha.yaml  ig.yaml  ru.yaml  yo.yaml
scripts/: measure_performance.py
tests/api/: test_api.py
tests/benchmark/: test_benchmark.py
tests/integration/: test_validation.py
tests/unit/: test_cli.py  test_counter_narrative.py  test_dogwhistles.py  test_engine.py  test_factory.py  test_i18n_smoke.py  test_multilingual.py  test_provenance.py  test_tracking.py
